# oloom

./: README.md  dev.compose.yaml  makefile
.github/workflows/: ci.yaml
pipeline/: .dockerignore  .gitignore  .infisical.json  activities.py  dockerfile  main.py  makefile  pyproject.toml  run_worker.py  run_workflow.py  shared.py  workflows.py
scripts/: video_processing.ipynb
web/: .dockerignore  dockerfile  drizzle.config.ts  eslint.config.js  makefile  next.config.js  package.json  uuid-encoder.d.ts
web/drizzle/: 0000_certain_jazinda.sql  0000_heavy_tiger_shark.sql  0001_tricky_the_spike.sql  0002_freezing_joseph.sql  0003_overrated_zuras.sql  0004_flippant_madelyne_pryor.sql
web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
web/prisma/: schema.prisma
web/src/: auth.ts  env.js
web/src/app/: layout.tsx  page.tsx
web/src/app/(protected)/: layout.tsx
web/src/app/(protected)/dashboard/: page.tsx
web/src/app/(public)/: page.tsx
web/src/app/(public)/login/: layout.tsx  page.tsx
web/src/app/(public)/share/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/components/: icons.tsx  screen-recorder.tsx
web/src/components/auth/: sign-in.tsx  sign-out.tsx
web/src/components/ui/: spinner.tsx
web/src/providers/: index.tsx  react-query.tsx
web/src/server/action/: minio.ts  shorturl.ts  video.ts
web/src/server/auth/: config.ts
web/src/server/db/: index.ts  schema.ts
web/src/styles/: globals.css
web/src/utils/: enoding.ts
(+11 files in other folders)
